refactor: use new Java methods
Mostly getFirst() and getLast() for lists. Also some other minor code
style fixes.